<resources>
    <string name="app_name">HCD</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="title_activity_user_main_page">UserMainPage</string>
    <string name="title_activity_symptoms__main">Symptoms_Main</string>
    <string name="title_activity_new_symptom">NewSymptom</string>
    <string name="title_activity_symptom_overview">Symptom_overview</string>
    <string name="title_activity_all_symptom_details">AllSymptom_details</string>
    <string name="title_activity_specific__symptom_click">Specific_Symptom_click</string>
    <string name="title_activity_workout__main">Workout_Main</string>
    <string name="title_activity_new_work__rountine">New_work_Rountine</string>
    <string name="title_activity_user_add_exercise">User_add_exercise</string>
    <string name="title_activity_add_exercise">add_exercise</string>
    <string name="title_activity_pushup_goal">Pushup_goal</string>
    <string name="title_activity_position_pushup">Position_pushup</string>
    <string name="title_activity_pushup_count">Pushup_count</string>
    <string name="title_activity_pushup_save">Pushup_save</string>
    <string name="title_activity_heart_rate_monitor_firstscreen">Heart_rate_monitor_firstscreen
    </string>
    <string name="title_activity_loading_screen__bioharness">Loading_screen_Bioharness</string>
    <string name="title_activity_heart_rate_display">heart_rate_display</string>
    <string name="title_activity_workout_overview">Workout_overview</string>
    <string name="title_activity_workout_overview__details">Workout_overview_Details</string>
    <string name="title_activity_report_main">Report_main</string>
    <string name="title_activity_food__diary__takeimage">Food_Diary_Takeimage</string>
    <string name="title_activity_food__save_details">Food_Save_details</string>
    <string name="title_activity_create_user">Create_user</string>
    <string name="title_activity_symptom_entry_list">Symptom_entry_list</string>
    <string name="routinelabel">"Routine : "</string>
    <string name="repslabel">"Repetitions : "</string>
    <string name="durationlabel">"Duration : "</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_heartrate_details">Heartrate_details</string>
    <string name="title_activity_heart_rate_information">HeartRate_information</string>
</resources>
