<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:textColor="#ffffff"
    android:background="#2ca5ee">

    <TextView
        android:id="@+id/routinelabel"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routinelabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/routine"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/routinelabel"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_rep"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repslabel"
        android:textSize="25sp"
        android:layout_below="@+id/routinelabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView_duration"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/durationlabel"
        android:textSize="25sp"
        android:layout_below="@+id/textView_rep"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/reps"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignTop="@+id/textView_rep"
        android:layout_toRightOf="@+id/textView_rep" />

    <TextView
        android:id="@+id/duration"
        android:textColor="#ffffff"
        android:background="#922eb5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@+id/textView_rep"
        android:layout_toRightOf="@+id/textView_duration"
        android:layout_toEndOf="@+id/textView_duration" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/button_del"
        android:onClick="routine_delete"
        android:layout_marginBottom="155dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>